[package]
name = "lsext"
version = "1.1.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo", "wrap_help", "derive"] }
ignore = "0.4.20"
tabular = "0.2.0"
